[tool.poetry]
name = "repl_python3_Apex-Map-Bot"
version = "0.1.0"
description = ""
authors = ["Deepzai <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
discord-py-interactions = "^3.0.2"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
